2003-02-15  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/include/Layout.class(projectTabs): cvs --> scm_index for
	toptab parameter.

	* www/themes/kde/Theme.class(projectTabs): ditto.

	* common/include/utils.php(ShowResultSet): lowercase f in
	"Functional"; valid XHTML 1.0 Transitional.

	* www/forum/admin/index.php: valid XHTML 1.0 Transitional.

	* www/forum/message.php: valid XHTML 1.0 Transitional.

	* www/forum/forum.php: valid XHTML 1.0 Transitional.

	* www/forum/index.php: valid XHTML 1.0 Transitional.

	* www/themes/kde/Theme.class(listTableTop): remove reference to
	unneeded clear.png.
	(makeProjectIcon): centre the icons.
	(searchBox): Fix XHTML for searching "This Forum".

	* INSTALL: mention AcceptPathInfo on if using Apache 2.

2003-02-13  Roland Mas  <lolando@debian.org>

	* deb-specific/install-exim.sh, utils/ldap/sql2ldif.pl,
	deb-specific/gforge.schema and a few other files: adapted to
	Mailman 2.1.

2003-02-13  Reinhard Spisser <reinhard@spisser.it>

	* www/tracker/browse.php:
	i18n of some missing strings, added category_any,
	status_any and group_any strings

	* www/tracker/add.php, www/tracker/detail.php,
	www/tracker/admin.php,
	www/pm/add_task.php, www/pm/browse_task.php,
	www/pm/ganttpage.php,
	www/include/languages/Base.tab:
	i18n of some missing strings

	* www/include/languages/Italian.tab:
	l10n of new strings

2003-02-12  Reinhard Spisser <reinhard@spisser.it>

	* common/forum/Forum.class:
	removed localization of Welcome message

	* www/forum/index.php, www/forum/message.php,
	www/forum/include/ForumHTML.class:
	Moved arguments to messages in the getText() function call

	* www/forum/forum.php, common/forum/ForumMessageFactory.class:
	Removed useless localization of some error messages

	* www/docman/view.php, www/docman/include/doc_utils.php,
	www/common/docman/DocumentGroup.class,
	www/common/docman/Document.class,
	www/include/languages/Base.tab:
	i18n of some missing strings

	* www/include/languages/Base.tab,